test/spec_vectors/simd_boolean/fail/module_13.wat
(module (func $i8x16.all_true-arg-empty (result v128) (i8x16.all_true)))